--- a/index.html
+++ b/index.html
@@ -124,6 +124,113 @@
                     </div>
                 </div>
             </section>
+            <section class="store-trend-categories">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12" data-aos="fade-up">
+                            <h5>Trend Categories</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div
+                            class="col-6 col-md-3 col-lg-2"
+                            data-aos="fade-up"
+                            data-aos-delay="100"
+                        >
+                            <a href="#" class="component-categories d-block">
+                                <div class="categories-image">
+                                    <img
+                                        src="images/categories-gadget.svg"
+                                        alt=""
+                                        class="w-100"
+                                    />
+                                </div>
+                                <p class="category-text">Gadgets</p>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-3 col-lg-2"
+                            data-aos="fade-up"
+                            data-aos-delay="200"
+                        >
+                            <a href="#" class="component-categories d-block">
+                                <div class="categories-image">
+                                    <img
+                                        src="images/categories-furniture.svg"
+                                        alt=""
+                                        class="w-100"
+                                    />
+                                </div>
+                                <p class="category-text">Furniture</p>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-3 col-lg-2"
+                            data-aos="fade-up"
+                            data-aos-delay="300"
+                        >
+                            <a href="#" class="component-categories d-block">
+                                <div class="categories-image">
+                                    <img
+                                        src="images/categories-makeup.svg"
+                                        alt=""
+                                        class="w-100"
+                                    />
+                                </div>
+                                <p class="category-text">Make up</p>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-3 col-lg-2"
+                            data-aos="fade-up"
+                            data-aos-delay="400"
+                        >
+                            <a href="#" class="component-categories d-block">
+                                <div class="categories-image">
+                                    <img
+                                        src="images/categories-sneaker.svg"
+                                        alt=""
+                                        class="w-100"
+                                    />
+                                </div>
+                                <p class="category-text">Sneakers</p>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-3 col-lg-2"
+                            data-aos="fade-up"
+                            data-aos-delay="500"
+                        >
+                            <a href="#" class="component-categories d-block">
+                                <div class="categories-image">
+                                    <img
+                                        src="images/categories-tools.svg"
+                                        alt=""
+                                        class="w-100"
+                                    />
+                                </div>
+                                <p class="category-text">Tools</p>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-3 col-lg-2"
+                            data-aos="fade-up"
+                            data-aos-delay="600"
+                        >
+                            <a href="#" class="component-categories d-block">
+                                <div class="categories-image">
+                                    <img
+                                        src="images/categories-baby.svg"
+                                        alt=""
+                                        class="w-100"
+                                    />
+                                </div>
+                                <p class="category-text">Baby</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <!-- Bootstrap core JavaScript -->
         <script src="/vendor/jquery/jquery.slim.min.js"></script>
