--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <section class="store-carousel">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-12" data-aos="zoom-in">
                             <div
                                 id="storeCarousel"
                                 class="carousel slide"
@@ -226,6 +226,187 @@
                                     />
                                 </div>
                                 <p class="category-text">Baby</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="store-new-products">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12" data-aos="fade-up">
+                            <h5>New Products</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div
+                            class="col-6 col-md-4 col-lg-3"
+                            data-aos="fade-up"
+                            data-aos-delay="100"
+                        >
+                            <a
+                                href="/details.html"
+                                class="component-products d-block"
+                            >
+                                <div class="products-thumbnail">
+                                    <div
+                                        class="products-image"
+                                        style="
+                                            background-image: url(images/AppleWatch.jpg);
+                                        "
+                                    ></div>
+                                </div>
+                                <div class="products-text">Apple Watch 4</div>
+                                <div class="products-price">$890</div>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-4 col-lg-3"
+                            data-aos="fade-up"
+                            data-aos-delay="200"
+                        >
+                            <a
+                                href="/details.html"
+                                class="component-products d-block"
+                            >
+                                <div class="products-thumbnail">
+                                    <div
+                                        class="products-image"
+                                        style="
+                                            background-image: url(images/orangeBogotta.jpg);
+                                        "
+                                    ></div>
+                                </div>
+                                <div class="products-text">Orange Bogotta</div>
+                                <div class="products-price">$94,509</div>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-4 col-lg-3"
+                            data-aos="fade-up"
+                            data-aos-delay="300"
+                        >
+                            <a
+                                href="/details.html"
+                                class="component-products d-block"
+                            >
+                                <div class="products-thumbnail">
+                                    <div
+                                        class="products-image"
+                                        style="
+                                            background-image: url(images/sofaTernyaman.jpg);
+                                        "
+                                    ></div>
+                                </div>
+                                <div class="products-text">Sofa Ternyaman</div>
+                                <div class="products-price">$1,409</div>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-4 col-lg-3"
+                            data-aos="fade-up"
+                            data-aos-delay="400"
+                        >
+                            <a
+                                href="/details.html"
+                                class="component-products d-block"
+                            >
+                                <div class="products-thumbnail">
+                                    <div
+                                        class="products-image"
+                                        style="
+                                            background-image: url(images/bubukMaketti.jpg);
+                                        "
+                                    ></div>
+                                </div>
+                                <div class="products-text">Bubuk Maketti</div>
+                                <div class="products-price">$225</div>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-4 col-lg-3"
+                            data-aos="fade-up"
+                            data-aos-delay="500"
+                        >
+                            <a
+                                href="/details.html"
+                                class="component-products d-block"
+                            >
+                                <div class="products-thumbnail">
+                                    <div
+                                        class="products-image"
+                                        style="
+                                            background-image: url(images/tatakanGelas.jpg);
+                                        "
+                                    ></div>
+                                </div>
+                                <div class="products-text">Tatakan Gelas</div>
+                                <div class="products-price">$45,184</div>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-4 col-lg-3"
+                            data-aos="fade-up"
+                            data-aos-delay="600"
+                        >
+                            <a
+                                href="/details.html"
+                                class="component-products d-block"
+                            >
+                                <div class="products-thumbnail">
+                                    <div
+                                        class="products-image"
+                                        style="
+                                            background-image: url(images/mavicKawe.jpg);
+                                        "
+                                    ></div>
+                                </div>
+                                <div class="products-text">Mavic Kawe</div>
+                                <div class="products-price">$503</div>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-4 col-lg-3"
+                            data-aos="fade-up"
+                            data-aos-delay="700"
+                        >
+                            <a
+                                href="/details.html"
+                                class="component-products d-block"
+                            >
+                                <div class="products-thumbnail">
+                                    <div
+                                        class="products-image"
+                                        style="
+                                            background-image: url(images/nike.jpg);
+                                        "
+                                    ></div>
+                                </div>
+                                <div class="products-text">
+                                    Black Edition Nike
+                                </div>
+                                <div class="products-price">$70,482</div>
+                            </a>
+                        </div>
+                        <div
+                            class="col-6 col-md-4 col-lg-3"
+                            data-aos="fade-up"
+                            data-aos-delay="800"
+                        >
+                            <a
+                                href="/details.html"
+                                class="component-products d-block"
+                            >
+                                <div class="products-thumbnail">
+                                    <div
+                                        class="products-image"
+                                        style="
+                                            background-image: url(images/monkeyToys.jpg);
+                                        "
+                                    ></div>
+                                </div>
+                                <div class="products-text">Monkey Toys</div>
+                                <div class="products-price">$783</div>
                             </a>
                         </div>
                     </div>
