section new product styling

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                     <div
                                         class="products-image"
                                         style="
-                                            background-image: url(images/AppleWatch.jpg);
+                                            background-image: url(/images/AppleWatch.jpg);
                                         "
                                     ></div>
                                 </div>
