--- a/details.html
+++ b/details.html
@@ -105,6 +105,32 @@
             </div>
         </nav>
 
+        <!-- page content -->
+        <div class="page-content page-details">
+            <section
+                class="store-breadcrumbs"
+                data-aos="fade-down"
+                data-aos-delay="100"
+            >
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <nav>
+                                <ol class="breadcrumb">
+                                    <li class="breadcrumb-item">
+                                        <a href="index.html">Home</a>
+                                    </li>
+                                    <li class="breadcrumb-item active">
+                                        <a href="index.html">Products Detail</a>
+                                    </li>
+                                </ol>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+
         <footer>
             <div class="container">
                 <div class="row">
