Section Breadcrumb Styling

--- a/details.html
+++ b/details.html
@@ -121,7 +121,7 @@
                                         <a href="index.html">Home</a>
                                     </li>
                                     <li class="breadcrumb-item active">
-                                        <a href="index.html">Products Detail</a>
+                                        Products Detail
                                     </li>
                                 </ol>
                             </nav>
