Section Gallery Markup

--- a/details.html
+++ b/details.html
@@ -129,6 +129,42 @@
                     </div>
                 </div>
             </section>
+            <section class="store-galery" id="galery">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8" data-aos="zoom-in">
+                            <transition name="slide-fade" mode="out-in">
+                                <img
+                                    :src="photos[activePhoto].url"
+                                    :key="photos[activePhoto].id"
+                                    class="w-100 main-image"
+                                    alt=""
+                                />
+                            </transition>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="row">
+                                <div
+                                    class="col-3 col-lg-12 mt-2 mt-lg-0"
+                                    v-for="(photo,index) in photos"
+                                    :key="photo.id"
+                                    data-aos="zoom-in"
+                                    data-aos-delay="100"
+                                >
+                                    <a href="#" @click="changeActive(index)">
+                                        <img
+                                            :src="photo.url"
+                                            class="w-100 thumbnail-image"
+                                            :class="{ active: index == activePhoto }"
+                                            alt=""
+                                        />
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
 
         <footer>
@@ -157,7 +193,7 @@
                     AOS.init();
                 },
                 data: {
-                    activePhoto: 1,
+                    activePhoto: 0,
                     photos: [
                         {
                             id: 1,
@@ -174,10 +210,6 @@
                         {
                             id: 4,
                             url: 'images/products-detail-4.jpg',
-                        },
-                        {
-                            id: 5,
-                            url: 'images/products-detail-5.jpg',
                         },
                     ],
                 },
