--- a/details.html
+++ b/details.html
@@ -165,6 +165,58 @@
                     </div>
                 </div>
             </section>
+            <div class="store-details-container" data-aos="fade-up">
+                <section class="store-heading">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <h1>sofa ternyaman</h1>
+                                <div class="owner">Rizal Gumelar</div>
+                                <div class="price">$1.08</div>
+                            </div>
+                            <div class="col-lg-2" data-aos="zoom-in">
+                                <a
+                                    href="/cart.html"
+                                    class="
+                                        btn btn-success
+                                        px-4
+                                        text-white
+                                        btn-block
+                                        mb-3
+                                    "
+                                >
+                                    add to cart
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="store-description">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 col-lg-8">
+                                <p>
+                                    The Nike Air Max 720 SE goes bigger than
+                                    ever before with Nike's tallest Air unit yet
+                                    for unimaginable, all-day comfort. There's
+                                    super breathable fabrics on the upper, while
+                                    colours add a modern edge.
+                                </p>
+                                <p>
+                                    Bring the past into the future with the Nike
+                                    Air Max 2090, a bold look inspired by the
+                                    DNA of the iconic Air Max 90. Brand-new Nike
+                                    Air cushioning underfoot adds unparalleled
+                                    comfort while transparent mesh and vibrantly
+                                    coloured details on the upper are blended
+                                    with timeless OG features for an edgy,
+                                    modernised look.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
 
         <footer>
