Section Description Styling

--- a/details.html
+++ b/details.html
@@ -170,8 +170,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-8">
-                                <h1>sofa ternyaman</h1>
-                                <div class="owner">Rizal Gumelar</div>
+                                <h1>Sofa Ternyaman</h1>
+                                <div class="owner">By Rizal Gumelar</div>
                                 <div class="price">$1.08</div>
                             </div>
                             <div class="col-lg-2" data-aos="zoom-in">
