--- a/details.html
+++ b/details.html
@@ -216,6 +216,69 @@
                         </div>
                     </div>
                 </section>
+                <section class="store-review">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 col-lg-8 mt-3 mb-3">
+                                <h5>Customer Review (3)</h5>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-lg-8">
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <img
+                                            src="images/icon-testimonial-1.png"
+                                            alt=""
+                                            class="mr-3 rounded-circle"
+                                        />
+                                        <div class="media-body">
+                                            <h5 class="mt-2 mb-1">
+                                                Fathiya Nur
+                                            </h5>
+                                            I thought it was not good for living
+                                            room. I really happy to decided buy
+                                            this product last week now feels
+                                            like homey.
+                                        </div>
+                                    </li>
+                                </ul>
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <img
+                                            src="images/icon-testimonial-2.png"
+                                            alt=""
+                                            class="mr-3 rounded-circle"
+                                        />
+                                        <div class="media-body">
+                                            <h5 class="mt-2 mb-1">Koko</h5>
+                                            I thought it was not good for living
+                                            room. I really happy to decided buy
+                                            this product last week now feels
+                                            like homey.
+                                        </div>
+                                    </li>
+                                </ul>
+                                <ul class="list-unstyled">
+                                    <li class="media">
+                                        <img
+                                            src="images/icon-testimonial-3.png"
+                                            alt=""
+                                            class="mr-3 rounded-circle"
+                                        />
+                                        <div class="media-body">
+                                            <h5 class="mt-2 mb-1">Thomas</h5>
+                                            I thought it was not good for living
+                                            room. I really happy to decided buy
+                                            this product last week now feels
+                                            like homey.
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
 
