Section Customer Review Styling

--- a/details.html
+++ b/details.html
@@ -41,7 +41,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a href="/index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
@@ -252,10 +252,10 @@
                                         />
                                         <div class="media-body">
                                             <h5 class="mt-2 mb-1">Koko</h5>
-                                            I thought it was not good for living
-                                            room. I really happy to decided buy
-                                            this product last week now feels
-                                            like homey.
+                                            Color is great with the minimalist
+                                            concept. Even I thought it was made
+                                            by Cactus industry. I do really
+                                            satisfied with this.
                                         </div>
                                     </li>
                                 </ul>
@@ -268,10 +268,10 @@
                                         />
                                         <div class="media-body">
                                             <h5 class="mt-2 mb-1">Thomas</h5>
-                                            I thought it was not good for living
-                                            room. I really happy to decided buy
-                                            this product last week now feels
-                                            like homey.
+                                            When I saw at first, it was really
+                                            awesome to have with. Just let me
+                                            know if there is another upcoming
+                                            product like this.
                                         </div>
                                     </li>
                                 </ul>
