Section Cart Item Markup

--- a/cart.html
+++ b/cart.html
@@ -130,6 +130,126 @@
                     </div>
                 </div>
             </section>
+
+            <section class="store-cart">
+                <div class="container">
+                    <div class="row" data-aos="fade-up" data-aos-delay="100">
+                        <div class="col-12 table-responsive">
+                            <table class="table table-borderless table-cart">
+                                <thead>
+                                    <tr>
+                                        <td>Image</td>
+                                        <td>Nam &amp; Seller</td>
+                                        <td>Price</td>
+                                        <td>Menu</td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td style="width: 25%">
+                                            <img
+                                                src="images/products-cart-1.jpg"
+                                                alt=""
+                                                class="cart-image"
+                                            />
+                                        </td>
+                                        <td style="width: 35%">
+                                            <div class="product-title">
+                                                Sofa Ternyaman
+                                            </div>
+                                            <div class="product-subtitle">
+                                                By Rizal
+                                            </div>
+                                        </td>
+                                        <td style="width: 35%">
+                                            <div class="product-title">
+                                                $20,111
+                                            </div>
+                                            <div class="product-subtitle">
+                                                USD
+                                            </div>
+                                        </td>
+                                        <td style="width: 20%">
+                                            <a
+                                                href=""
+                                                class="btn btn-remove-cart"
+                                            >
+                                                Remove
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="width: 25%">
+                                            <img
+                                                src="images/products-cart-2.jpg"
+                                                alt=""
+                                                class="cart-image"
+                                            />
+                                        </td>
+                                        <td style="width: 35%">
+                                            <div class="product-title">
+                                                Sneaker
+                                            </div>
+                                            <div class="product-subtitle">
+                                                By Rizal
+                                            </div>
+                                        </td>
+                                        <td style="width: 35%">
+                                            <div class="product-title">
+                                                $50,111
+                                            </div>
+                                            <div class="product-subtitle">
+                                                USD
+                                            </div>
+                                        </td>
+                                        <td style="width: 20%">
+                                            <a
+                                                href=""
+                                                class="btn btn-remove-cart"
+                                            >
+                                                Remove
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="width: 25%">
+                                            <img
+                                                src="images/products-cart-3.jpg"
+                                                alt=""
+                                                class="cart-image"
+                                            />
+                                        </td>
+                                        <td style="width: 35%">
+                                            <div class="product-title">
+                                                Coffee Holder
+                                            </div>
+                                            <div class="product-subtitle">
+                                                By Rizal
+                                            </div>
+                                        </td>
+                                        <td style="width: 35%">
+                                            <div class="product-title">
+                                                $2,111
+                                            </div>
+                                            <div class="product-subtitle">
+                                                USD
+                                            </div>
+                                        </td>
+                                        <td style="width: 20%">
+                                            <a
+                                                href=""
+                                                class="btn btn-remove-cart"
+                                            >
+                                                Remove
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
 
         <footer>
