--- a/cart.html
+++ b/cart.html
@@ -252,6 +252,106 @@
                         <div class="col-12">
                             <hr />
                         </div>
+                        <div class="col-h2">
+                            <h2 class="mb-4">Shipping Details</h2>
+                        </div>
+                    </div>
+                    <div
+                        class="row mb-2"
+                        data-aos="fade-up"
+                        data-aos-delay="200"
+                    >
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="addressOne">Address 1</label>
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="addressOne"
+                                    name="addressOne"
+                                    value="Jl. Warung Awi"
+                                />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="addressTwo">Address 2</label>
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="addressTwo"
+                                    name="addressTwo"
+                                    value="Jl. Papanggungan"
+                                />
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="Province">Province</label>
+                                <select
+                                    name="province"
+                                    id="province"
+                                    class="form-control"
+                                >
+                                    <option value="jabar">Jawa Barat</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="city">City</label>
+                                <select
+                                    name="city"
+                                    id="city"
+                                    class="form-control"
+                                >
+                                    <option value="bandung">Bandung</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="PostalCode">Postal Code</label>
+                                <input
+                                    type="text"
+                                    name="postalCode"
+                                    id="popstalCode"
+                                    class="form-control"
+                                />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="country">Country</label>
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="country"
+                                    name="country"
+                                    value="Indonesia"
+                                />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="mobile">Mobile</label>
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="mobile"
+                                    name="mobile"
+                                    value="+6282115420020"
+                                />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" data-aos="fade-up" data-aos-delay="150">
+                        <div class="col-12">
+                            <hr />
+                        </div>
+                        <div class="col-h2">
+                            <h2 class="mb-4">Payment Information</h2>
+                        </div>
                     </div>
                 </div>
             </section>
