Checkout Success Markup

--- a/cart.html
+++ b/cart.html
@@ -376,7 +376,7 @@
                         </div>
                         <div class="col-8 col-md-3">
                             <a
-                                href=""
+                                href="success.html"
                                 class="btn btn-success mt-4 px-4 btn-block"
                                 >Checkout Now
                             </a>
