--- a/register-success.html
+++ b/register-success.html
@@ -41,13 +41,15 @@
                                 <a
                                     href="/dashboard.html"
                                     class="btn btn-success w-50 mt-4"
-                                    >My Dashboard</a
                                 >
+                                    My Dashboard
+                                </a>
                                 <a
                                     href="/index.html"
                                     class="btn btn-signup w-50 mt-2"
-                                    >Go to shopping</a
                                 >
+                                    Go to shopping
+                                </a>
                             </div>
                         </div>
                     </div>
