--- a/login.html
+++ b/login.html
@@ -102,14 +102,14 @@
                                     />
                                 </div>
                                 <a
-                                    href="dashboard.html"
+                                    href="/dashboard.html"
                                     class="btn btn-success btn-block w-75 mt-4"
                                 >
                                     Sign In to My Account
                                 </a>
                                 <a
-                                    href="register.html"
-                                    class="btn btn-signup btn-block w-75 mt-2"
+                                    href="/register.html"
+                                    class="btn btn-signup w-75 mt-2"
                                 >
                                     Sign Up
                                 </a>
