--- a/dashboard.html
+++ b/dashboard.html
@@ -186,5 +186,11 @@
         <script>
             AOS.init();
         </script>
+        <script>
+            $('#menu-toggle').click(function (e) {
+                e.preventDefault();
+                $('#wrapper').toggleClass('toggled');
+            });
+        </script>
     </body>
 </html>
