--- a/dashboard.html
+++ b/dashboard.html
@@ -244,6 +244,116 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="row mt-3">
+                                    <div class="col-12 mt-2">
+                                        <h5 class="mb-3">Recent Transaction</h5>
+                                        <a
+                                            href="dashboard-transaction-details.html"
+                                            class="card card-list d-block"
+                                        >
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-md-1">
+                                                        <img
+                                                            src="images/dashboard-icon-product-1.png"
+                                                            alt=""
+                                                        />
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        Shirup Marzzan
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        Rizal Gumelar
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        12 januari, 2021
+                                                    </div>
+                                                    <div
+                                                        class="
+                                                            col-md-1
+                                                            d-none d-md-block
+                                                        "
+                                                    >
+                                                        <img
+                                                            src="images/dashboard-arrow-right.svg"
+                                                            alt=""
+                                                        />
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                        <a
+                                            href="dashboard-transaction-details.html"
+                                            class="card card-list d-block"
+                                        >
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-md-1">
+                                                        <img
+                                                            src="images/dashboard-icon-product-2.png"
+                                                            alt=""
+                                                        />
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        LeBrone X
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        Rizal Gumelar
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        12 januari, 2021
+                                                    </div>
+                                                    <div
+                                                        class="
+                                                            col-md-1
+                                                            d-none d-md-block
+                                                        "
+                                                    >
+                                                        <img
+                                                            src="images/dashboard-arrow-right.svg"
+                                                            alt=""
+                                                        />
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                        <a
+                                            href="dashboard-transaction-details.html"
+                                            class="card card-list d-block"
+                                        >
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-md-1">
+                                                        <img
+                                                            src="images/dashboard-icon-product-3.png"
+                                                            alt=""
+                                                        />
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        Shayna
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        Rizal Gumelar
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        12 januari, 2021
+                                                    </div>
+                                                    <div
+                                                        class="
+                                                            col-md-1
+                                                            d-none d-md-block
+                                                        "
+                                                    >
+                                                        <img
+                                                            src="images/dashboard-arrow-right.svg"
+                                                            alt=""
+                                                        />
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
