--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,7 @@
                             My Products
                         </a>
                         <a
-                            href="dashboard-transaction.html"
+                            href="dashboard-transactions.html"
                             class="list-group-item list-group-item-action"
                         >
                             Transaction
